@@ -182,6 +182,17 @@
     </message>
 </context>
 <context>
+    <name>BoardContextMenu</name>
+    <message>
+        <source>Go to Move %1</source>
+        <translation>Gå til trekk %1</translation>
+    </message>
+    <message>
+        <source>Move Annotation</source>
+        <translation>Flytt anmerkning</translation>
+    </message>
+</context>
+<context>
     <name>ComputerDialog</name>
     <message>
         <source>Computer Settings</source>
@@ -1193,7 +1204,7 @@ Mnemonic for menu item Make Main Variation. Leave empty for no mnemonic.</extrac
     <message>
         <source>V</source>
         <extracomment>Mnemonic for menu View. Leave empty for no mnemonic.</extracomment>
-        <translation type="unfinished">V</translation>
+        <translation>V</translation>
     </message>
     <message>
         <source>A</source>
@@ -1247,6 +1258,10 @@ Mnemonic for menu item Make Main Variation. Leave empty for no mnemonic.</extrac
     <message>
         <source>Very Bad</source>
         <translation>Veldig dårlig</translation>
+    </message>
+    <message>
+        <source>Move %1</source>
+        <translation>Trekk %1</translation>
     </message>
 </context>
 <context>
