@@ -21,6 +21,7 @@
         <file>qml/AppearanceDialog.qml</file>
         <file>qml/AsciiArtSaveDialog.qml</file>
         <file>qml/Board.qml</file>
+        <file>qml/BoardContextMenu.qml</file>
         <file>qml/BusyIndicator.qml</file>
         <file>qml/Button.qml</file>
         <file>qml/ComputerDialog.qml</file>
