@@ -14,6 +14,7 @@ Version 15.UNKNOWN (master)
 * Gnome and KDE thumbnailers have been removed because they depended on
   the code of the old QWidgets-based GUI.
 * New themes optimized for colorblindness.
+* New context menu to go to any played move on board or edit its annotation.
 * Additional warning dialogs to reduce the likelihood that an autosaved
   game is lost, for example because it was changed by another instance
   of Pentobi.
